--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
             <td>經歷</td>
             <td>
               <ol>
-                <li>...</li>
+                <li>前端網頁實習生 2022/03-2022/07</li>
                 <li>...</li>
               </ol>
             </td>
