--- a/resume.html
+++ b/resume.html
@@ -23,9 +23,10 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">首頁</a></li>
-          <li><a class="active" href="#">我的履歷</a></li>
+          <li><a class="active" href="#">首頁</a></li>
+          <li><a href="resume.html">我的履歷</a></li>
           <li><a href="contact.html">聯絡方式</a></li>
+          <li><a href="projects.html">我的作品</a></li>
           <li><a href="./taiwanProject/index.html">Taiwan Project</a></li>
           <li><a href="./HawaiiProject/index.html">Hawaii Project</a></li>
         </ul>
