Add 5 projects to the resume

--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,31 @@
               >React Typescript Todo List</a
             >
           </li>
+          <li>
+            <a href="https://kuenpongfa221.github.io/ReactTSTableApp/"
+              >React Typescript Table App</a
+            >
+          </li>
+          <li>
+            <a href="https://kuenpongfa221.github.io/ReactTSCarousel/"
+              >React Typescript Carousel</a
+            >
+          </li>
+          <li>
+            <a href="https://kuenpongfa221.github.io/ReactTSToggleSideBar/"
+              >React Typescript Toggle side bar</a
+            >
+          </li>
+          <li>
+            <a href="https://kuenpongfa221.github.io/ReactTSForm/"
+              >React Typescript Form</a
+            >
+          </li>
+          <li>
+            <a href="https://kuenpongfa221.github.io/ReactTSDadJokes/"
+              >React Typescript Dad Jokes</a
+            >
+          </li>
         </ol>
       </section>
     </main>
