Fix change website bugs and update resume

--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,10 @@
     <header>
       <nav>
         <ul>
-          <li><a class="active" href="#">首頁</a></li>
+          <li><a href="index.html">首頁</a></li>
           <li><a href="resume.html">我的履歷</a></li>
           <li><a href="contact.html">聯絡方式</a></li>
-          <li><a href="projects.html">我的作品</a></li>
+          <li><a class="active" href="#">我的作品</a></li>
           <li><a href="./taiwanProject/index.html">Taiwan Project</a></li>
           <li><a href="./HawaiiProject/index.html">Hawaii Project</a></li>
         </ul>
@@ -53,6 +53,11 @@
             >
           </li>
           <li>
+            <a href="https://kuenpongfa221.github.io/ReactTSProgressBar/"
+              >React Typescript Progress Bar</a
+            >
+          </li>
+          <li>
             <a href="https://kuenpongfa221.github.io/ReactTSCarousel/"
               >React Typescript Carousel</a
             >
@@ -73,6 +78,16 @@
             >
           </li>
         </ol>
+        <br />
+
+        <h2>MERN(Mongodb+Express+React+Node.js)+Typescript:</h2>
+        <ul>
+          <li>
+            <a href="https://github.com/kuenpongfa221/ReactTSTodoListMaking"
+              >MERN Typesciprt Todo List</a
+            >
+          </li>
+        </ul>
       </section>
     </main>
   </body>
