--- a/resume.html
+++ b/resume.html
@@ -23,8 +23,8 @@
     <header>
       <nav>
         <ul>
-          <li><a class="active" href="#">首頁</a></li>
-          <li><a href="resume.html">我的履歷</a></li>
+          <li><a href="index.html">首頁</a></li>
+          <li><a class="active" href="#">我的履歷</a></li>
           <li><a href="contact.html">聯絡方式</a></li>
           <li><a href="projects.html">我的作品</a></li>
           <li><a href="./taiwanProject/index.html">Taiwan Project</a></li>
@@ -38,7 +38,24 @@
         <table>
           <tr style="border-top: 2px solid gray">
             <td style="width: 25%">自我簡介</td>
-            <td style="width: 75%">我在國立臺灣師範大學就讀學習科學系</td>
+            <td style="width: 75%">
+              大家好，我是邵斌，畢業於國立臺灣師範大學，學習科學系。<br />簡單介紹我們系所，可以視作「資訊教育」系，一方面學習資訊類科目，<br />例如程式設計、資料結構、演算法，另一方面學習教育理論，包含教育心理學等等。
+              <br />
+              個性隨和， 目前畢業、當完兵，準備穩定工作。<br />
+              目前職涯想前進的方向為網頁前端、全端工程師，配合公司的方向前進。
+              <br />
+              <br />
+              在網頁方面，一路上從Html、CSS、Javascript開始學習，刻了一個Taiwan
+              project與Hawaii
+              project，與這個履歷自我介紹網站，接著學習React框架，在學習過程中再度了解到Typescript的重要性，於是結合React+Typescript，
+              製作了進度條(progress bar)、輪播(carousel)、側邊欄切換(Toggle side
+              bar)等等
+              接著又學習串聯後端API，實作了MERN(mongodb+express+React+Node.js)project，一個TodoList
+              Project，使得前端與後端連在一起。願意學習各種框架與技術。
+              <br />
+              <br />
+              以上為我的技能樹與學習路徑，期待有機會加入貴司。
+            </td>
           </tr>
 
           <tr>
@@ -82,10 +99,16 @@
           <tr>
             <td>開發經驗</td>
             <td>
-              我曾經開發過兩個網頁前端專案，分別是台灣經濟發展Project以及
-              夏威夷租借服務網站Project。我負責從構想、用Figma畫出網頁
-              架構、設計使用者介面UI/UX設計、用HTML做出基本網頁架構、
-              CSS將網頁前端美化以及提升使用外觀
+              <h2>均放在 <a href="/projects.html">「我的作品」</a></h2>
+              <h3>前端:</h3>
+              <h3>&nbsp&nbsp html+CSS:</h3>
+              &nbsp&nbsp 2個project與這個自我介紹網站
+              <h3>&nbsp&nbsp React+Typescript:</h3>
+              &nbsp&nbsp 8個小project，包含進度條(progress
+              bar)、輪播(carousel)、側邊欄切換(Toggle side bar)等等
+              <h3>全端:</h3>
+              <h3>&nbsp&nbsp MERN(Mongodb+Express+React+Node.js):</h3>
+              &nbsp&nbsp 1個todo list
             </td>
           </tr>
         </table>
