--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
     <header>
       <nav>
         <ul>
-          <li><a class="active" href="#">首頁</a></li>
+          <li><a href="index.html">首頁</a></li>
           <li><a href="resume.html">我的履歷</a></li>
-          <li><a href="contact.html">聯絡方式</a></li>
+          <li><a class="active" href="#">聯絡方式</a></li>
           <li><a href="projects.html">我的作品</a></li>
           <li><a href="./taiwanProject/index.html">Taiwan Project</a></li>
           <li><a href="./HawaiiProject/index.html">Hawaii Project</a></li>
@@ -59,7 +59,7 @@
       <section class="contact">
         <div class="content">
           <h2>我的電話：09XX-XXX-XXX</h2>
-          <h2>我的Email： showbin41@gmail.com</h2>
+          <h2>我的Email： lifeprocess91@gmail.com</h2>
           <h2>方便聯絡時間：週一至週六早上8點到晚上7點</h2>
           <h2>其他聯絡方式：臉書、IG</h2>
         </div>
