Change demo photos and add resume icon

--- a/resume.html
+++ b/resume.html
@@ -93,6 +93,16 @@
               />
               <img src="./r/ICONS/icons8-css3.svg" title="css3" alt="css3" />
               <img src="./r/ICONS/icons8-javascript.svg" title="js" alt="js" />
+              <img
+                src="./r/ICONS/icons8-react-native.svg"
+                title="react"
+                alt="react"
+              />
+              <img
+                src="./r/ICONS/icons8-mongodb.svg"
+                title="mongodb"
+                alt="mongodb"
+              />
             </td>
           </tr>
 
