--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,6 @@
           <li><a href="resume.html">我的履歷</a></li>
           <li><a href="contact.html">聯絡方式</a></li>
           <li><a class="active" href="#">我的作品</a></li>
-          <li><a href="./taiwanProject/index.html">Taiwan Project</a></li>
-          <li><a href="./HawaiiProject/index.html">Hawaii Project</a></li>
         </ul>
       </nav>
     </header>
@@ -85,6 +83,17 @@
           <li>
             <a href="https://github.com/kuenpongfa221/ReactTSTodoListMaking"
               >MERN Typesciprt Todo List</a
+            >
+          </li>
+        </ul>
+
+        <br />
+
+        <h2>React + React Redux Toolkit + Material UI + Firebase</h2>
+        <ul>
+          <li>
+            <a href="https://kuenpongfa221.github.io/shopee_clone/"
+              >蝦皮clone(shopee clone)</a
             >
           </li>
         </ul>
